--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,11 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.1.3.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR3'
+    implementation group: 'io.github.openfeign', name: 'feign-gson', version: '9.3.1'
+    implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '9.3.1'
     implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
     implementation 'io.jsonwebtoken:jjwt-api:0.10.7'
     runtime 'io.jsonwebtoken:jjwt-impl:0.10.7',
@@ -42,7 +45,8 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+    testCompile group: 'junit', name: 'junit', version: '4.13-beta-3'
 }
 
 dependencyManagement {
