token restructure + lombok; todo: needs clean up

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '9.3.1'
     implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
     implementation 'io.jsonwebtoken:jjwt-api:0.10.7'
+
+    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
+    annotationProcessor 'org.projectlombok:lombok'
+
     runtime 'io.jsonwebtoken:jjwt-impl:0.10.7',
             // Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
             //'org.bouncycastle:bcprov-jdk15on:1.60',
