added test logs to tests run via gradle

--- a/build.gradle
+++ b/build.gradle
@@ -59,5 +59,8 @@ dependencyManagement {
 }
 
 test {
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+    }
 	useJUnitPlatform()
 }
